RESOLVED FIXED 242721
Crash if IOHIDDeviceCopyMatchingElements returns null
https://bugs.webkit.org/show_bug.cgi?id=242721
Summary Crash if IOHIDDeviceCopyMatchingElements returns null
Brady Eidson
Reported 2022-07-13 15:35:00 PDT
Crash if IOHIDDeviceCopyMatchingElements returns null rdar://70867237
Attachments
Brady Eidson
Comment 1 2022-07-13 15:44:43 PDT
EWS
Comment 2 2022-07-13 16:06:35 PDT
Committed 252428@main (f0fbb371107f): <https://commits.webkit.org/252428@main> Reviewed commits have been landed. Closing PR #2388 and removing active labels.
WebKit Commit Bot
Comment 3 2022-07-13 17:21:54 PDT
Re-opened since this is blocked by bug 242728
Brady Eidson
Comment 4 2022-07-13 17:39:09 PDT
EWS
Comment 5 2022-07-13 17:41:59 PDT
Committed 252431@main (5f10be336ff3): <https://commits.webkit.org/252431@main> Reviewed commits have been landed. Closing PR #2395 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.