Crash if IOHIDDeviceCopyMatchingElements returns null https://bugs.webkit.org/show_bug.cgi?id=242721 <rdar://70867237>

Reviewed by Tim Horton.

* Source/WebCore/platform/mac/HIDDevice.cpp:
(WebCore::HIDDevice::uniqueInputElementsInDeviceTreeOrder const): Null check the returned elements array.

Canonical link: https://commits.webkit.org/252428@main